[package]
name = "sextant"
authors = ["Erik Rose <erik.w.rose@gmail.com>"]
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "sextant"

[dependencies]
polite = { path = "../cordial/polite", default-features = false, features = ["bin", "gis"] }
geo = "0.28.0"
geojson = "0.24.1"
serde = { version = "1.0.197", features = ["derive"] }
indicatif = { version = "0.17.8", features = ["rayon"] }
rayon = "1.9.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
shapefile = { version = "0.5.0", features = ["geo-types"] }
galileo = "0.1.1"
proj = "0.27.2"
bincode = "1.3.3"
clap = { version = "4.5.2", features = ["derive"] }
galileo-types = "0.1.1"
num-traits = "0.2.18"
geo-types = "0.7.13"
geozero = "0.12.0"
tokio = "1.36.0"
